--- a/Assignments/assignment_5/Jenkinsfile
+++ b/Assignments/assignment_5/Jenkinsfile
@@ -23,7 +23,7 @@ pipeline {
                 sh """
                 ${HOME}/.venv/bin/pip3 install --quiet robotframework
                 ${HOME}/.venv/bin/pip3 install --quiet robotframework-seleniumlibrary
-                ${HOMEBREW_PREFIX}/bin/brew install postman-cli
+                /opt/homebrew/bin/brew install postman-cli
                 """
             }
         }
@@ -43,7 +43,7 @@ pipeline {
                         echo "Running API Tests"
                         sh """
                         mkdir ${API_RESULTS}
-                        ${HOMEBREW_PREFIX}/bin/postman collection run ${API_TESTS} --reporters cli,json --reporter-json-export ${API_RESULTS}\\api_test_report.json
+                        /opt/homebrew/bin/postman collection run ${API_TESTS} --reporters cli,json --reporter-json-export ${API_RESULTS}\\api_test_report.json
                         """
                     }
                 }
