--- a/Assignments/assignment_5/Jenkinsfile
+++ b/Assignments/assignment_5/Jenkinsfile
@@ -53,9 +53,10 @@ pipeline {
         stage('Publish Results') {
             steps {
                 echo "Publishing Web Test Results"
-                robot outputFileName: "${WEB_RESULTS}/output.xml",
-                      reportFileName: "${WEB_RESULTS}/report.html",
-                      logFileName: "${WEB_RESULTS}/log.html"
+                robot outputPath: "${WEB_RESULTS}",
+                      outputFileName: "output.xml",
+                      reportFileName: "report.html",
+                      logFileName: "log.html"
 
                 echo "Publishing API Test Results (as artifact)"
                 archiveArtifacts artifacts: "${API_RESULTS}/*.json", fingerprint: true
