--- a/Assignments/assignment_5/Jenkinsfile
+++ b/Assignments/assignment_5/Jenkinsfile
@@ -43,7 +43,7 @@ pipeline {
                         echo "Running API Tests"
                         sh """
                         mkdir -p ${API_RESULTS}
-                        /opt/homebrew/bin/postman collection run ${API_TESTS} --reporters cli,json --reporter-json-export ${API_RESULTS}\\api_test_report.json
+                        /opt/homebrew/bin/postman collection run ${API_TESTS} --reporters cli,json --reporter-json-export ${API_RESULTS}/api_test_report.json
                         """
                     }
                 }
